# prompt-clip-web

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  IOS_SHARE_IMAGE_SYNC.md  LICENSE  README.en.md  README.md  SPEC.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.test.ts  vite.config.ts  桌面版多端实现方案.md
.github/workflows/: release.yml
docs/: IMPLEMENTATION_PLAN.md  PromptClip-Desktop-Multiplatform-Design.md  PromptClip-Web-PRD-1.0.0.md  PromptClip-i18n-SPEC.md  SPEC-性能优化.md  preview.html  promptclip-sync-design.md  promptclip-web.html  历史笔记管理-SPEC-IOS.md  工作区元数据路径调整-SPEC-IOS.md  工作区元数据路径调整-SPEC.md  批注功能-SPEC-IOS.md
docs/Milestone-1.0.0/: SPEC.md
docs/about/: promptclip-about.html
docs/分享图/: SPEC-SHARE-IOS.md  SPEC.md
extension/: manifest.json  sidepanel.html  tsconfig.json  vite.config.ts
extension/src/: background.js
scripts/: icon-glyphs.txt  subset-material-symbols.sh  subset_material_symbols.py  verify-subset.py
specs/: stable-id-for-history.md
spike/chrome-extension-fsa/: README.md  background.js  manifest.json  picker.html  picker.js  sidepanel.html  sidepanel.js
src/: App.test.tsx  App.tsx  bundleOptimization.test.ts  iconFontAssets.test.ts  index.css  index.test.ts  markdownPreviewStyles.test.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  quick-search.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  webdav.rs
src/components/: WelcomeScreen.test.tsx  WelcomeScreen.tsx  index.ts
src/constants/: config.ts  defaults.ts  index.ts  keybindings.ts  shareTemplates.ts
src/hooks/: index.ts  useDirectoryPicker.ts  useKeyboardShortcuts.ts  usePromptLazyLoad.ts  usePromptLoader.ts  useQuickSearchBridge.test.tsx  useQuickSearchBridge.ts  useQuickSearchShortcutRegister.test.tsx  (+4 more)
src/i18n/: index.ts  (+4 more)
(+177 files in other folders)
