[package]
name = "promptclip"
version = "0.1.0"
description = "PromptClip desktop app"
authors = ["wenzisay"]
license = "AGPL-3.0-only"
repository = "https://github.com/wenzisay/prompt-clip-web"
edition = "2021"
rust-version = "1.85.0"

# See more about tools and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "promptclip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
arboard = "3"
enigo = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.2", features = ["image-png", "tray-icon", "macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-application-services = "0.3"
